--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <ul>
 
-<li><a href="robin.html">Úvod</a></li>
-<li><a href="obrazky.html">Moje fotky</a></li>
-<li><a href="kontakt.html">Kontakt</a></li>
+<li><a href="index.html">Úvod</a></li>
+<li><a href="galerie.html">Moje fotky</a></li>
+<li><a href="kontakty.html">Kontakt</a></li>
 
 </ul>
 </nav>
